# nipigaz_homeworks

./: .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_calc_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_test_calc_py.html  z_145eef247bfb46b6_test_processing_py.html
src/: masks.py  processing.py  test.py  widget.py
tests/: test_masks.py  test_processing.py  test_widget.py
