[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Andrey <nipigaz@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
